--- a/package.json
+++ b/package.json
@@ -11,25 +11,31 @@
     "@dhis2/d2-ui-table": "^6.1.1",
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
+    "add": "^2.0.6",
     "antd": "^3.24.3",
     "classnames": "latest",
     "d2": "^31.8.1",
     "d3": "^5.9.7",
     "lodash": "^4.17.15",
-    "mobx": "^5.13.0",
-    "mobx-react": "^6.1.1",
+    "mobx": "^5.14.2",
+    "mobx-react": "^6.1.4",
     "mobx-router": "^0.0.20",
     "mobx-state-tree": "^3.14.1",
     "mobx-state-tree-router": "^1.2.0",
     "prop-types": "latest",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-highlight-words": "^0.16.0",
+    "react-quill": "^1.3.3",
     "react-resizable": "^1.9.0",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.0.1",
+    "yarn": "^1.19.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "react-app-rewired build && cd build && zip -r -D function-updater.zip .",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
@@ -51,6 +57,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@types/react-router-dom": "^5.1.2",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.4.1",
     "less": "^3.9.0",
