--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "latest",
     "d2": "^31.8.1",
     "d3": "^5.9.7",
+    "file-saver": "^2.0.2",
     "lodash": "^4.17.15",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
@@ -32,6 +33,8 @@
     "react-resizable": "^1.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
+    "shortid": "^2.2.15",
+    "xlsx": "^0.15.3",
     "yarn": "^1.19.1"
   },
   "scripts": {
